--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="banner-section">
-      <div class="banner-left">
+    <!-- Banner Section Start -->
+    <section class="banner-section d-flex">
+      <div class="banner-left width-50">
         <h1>Just <span> Eat </span> Healthy</h1>
         <h1>With Food Network</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel eos
+          recusandae, hic quibusdam soluta commodi voluptatem provident
+          consequuntur atque qui totam! Dolor, ut dolore ex tenetur eveniet
+          rerum eligendi unde!
+        </p>
+        <a href="#" class="btn"> Order Food </a>
       </div>
+      <div class="banner-right width-50">
+        <img src="images/top-banner.png" alt="Top Banner image " />
+      </div>
+    </section>
+
+    <!-- About Section Start -->
+    <section class="about">
+      <div class="about-left"></div>
+      <div class="about-right"></div>
     </section>
   </body>
 </html>
