--- a/index.html
+++ b/index.html
@@ -28,9 +28,19 @@
     </section>
 
     <!-- About Section Start -->
-    <section class="about">
-      <div class="about-left"></div>
-      <div class="about-right"></div>
+    <section class="about-section d-flex">
+      <div class="about-left width-50">
+        <img src="images/about.png" alt="About Chef" />
+      </div>
+      <div class="about-right width-50">
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
+          officiis voluptate iure excepturi cum magnam velit eum repudiandae!
+          Recusandae explicabo possimus ex amet dolor eligendi.
+        </p>
+        <a href="#" class="btn"> Contact Me</a>
+      </div>
     </section>
   </body>
 </html>
