--- a/index.html
+++ b/index.html
@@ -42,5 +42,51 @@
         <a href="#" class="btn"> Contact Me</a>
       </div>
     </section>
+
+    <!-- Recipies Section Start -->
+    <section class="recipie-section">
+      <div class="recipie-top-content text-center">
+        <h2>My Recipies</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
+          rem nesciunt!
+        </p>
+      </div>
+      <div class="recipie-items-container d-flex">
+        <div class="recipie-item width-30 mr-3">
+          <img src="images/item1.png" alt="First item of food" />
+          <h3>Recipie Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
+            error expedita assumenda inventore architecto fuga hic amet
+            accusantium?
+          </p>
+        </div>
+
+        <div class="recipie-item width-30 mr-3">
+          <img src="images/item2.png" alt="Second item of food" />
+          <h3>Recipie Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
+            error expedita assumenda inventore architecto fuga hic amet
+            accusantium?
+          </p>
+        </div>
+
+        <div class="recipie-item width-30">
+          <img src="images/item3.png" alt="Third item of food" />
+          <h3>Recipie Title</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
+            error expedita assumenda inventore architecto fuga hic amet
+            accusantium?
+          </p>
+        </div>
+      </div>
+    </section>
+
+
+    
   </body>
 </html>
