--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Banner Section Start -->
+    <!-- Banner Section  -->
     <section class="banner-section d-flex">
       <div class="banner-left width-50">
         <h1>Just <span> Eat </span> Healthy</h1>
@@ -27,7 +27,7 @@
       </div>
     </section>
 
-    <!-- About Section Start -->
+    <!-- About Section  -->
     <section class="about-section d-flex">
       <div class="about-left width-50">
         <img src="images/about.png" alt="About Chef" />
@@ -43,7 +43,7 @@
       </div>
     </section>
 
-    <!-- Recipies Section Start -->
+    <!-- Recipies Section  -->
     <section class="recipie-section">
       <div class="recipie-top-content text-center">
         <h2>My Recipies</h2>
@@ -86,7 +86,26 @@
       </div>
     </section>
 
+    <!-- Counter Section -->
+    <section class="counter-section d-flex">
+      <div class="counter-item width-30 mr-3 text-center">
+        <h2>700k</h2>
+        <p>Youtube Subscriber</p>
+      </div>
+      <div class="counter-item width-30 mr-3 text-center">
+        <h2>2.4m</h2>
+        <p>Instagram Followers</p>
+      </div>
+      <div class="counter-item width-30 mr-3 text-center">
+        <h2>100k</h2>
+        <p>Dribble Shot Likes</p>
+      </div>
+    </section>
 
-    
+    <!-- Footer Section -->
+    <footer class="text-center">
+      <h2><span>Food </span> Network</h2>
+      <p>Eat Healthy to Live Healthy, Live Healthy to Live Happy</p>
+    </footer>
   </body>
 </html>
