--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
       <div class="recipie-items-container d-flex">
         <div class="recipie-item width-30 mr-3">
-          <img src="images/item1.png" alt="First item of food" />
-          <h3>Recipie Title</h3>
+          <img src="images/sandwich.jpeg" alt="First item of food" />
+          <h3>Rainbow Sandwich</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
             error expedita assumenda inventore architecto fuga hic amet
@@ -65,8 +65,8 @@
         </div>
 
         <div class="recipie-item width-30 mr-3">
-          <img src="images/item2.png" alt="Second item of food" />
-          <h3>Recipie Title</h3>
+          <img src="images/burger.jpg" alt="Second item of food" />
+          <h3>Vegetarian Burger</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
             error expedita assumenda inventore architecto fuga hic amet
@@ -75,8 +75,8 @@
         </div>
 
         <div class="recipie-item width-30">
-          <img src="images/item3.png" alt="Third item of food" />
-          <h3>Recipie Title</h3>
+          <img src="images/frenchtoast.jpg" alt="Third item of food" />
+          <h3>Raspberry Stuffed French Toast</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
             error expedita assumenda inventore architecto fuga hic amet
