--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Home meu Area -->
+    <div class="navbar-area">
+      <a href="#" class="logo"> <img src="images/logo.svg" alt="logo" /></a>
+      <nav>
+        <ul class="d-flex">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Recipie</a></li>
+          <li><a href="#">Testimonial</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <!-- Banner Section  -->
     <section class="banner-section d-flex">
       <div class="banner-left width-50">
