--- a/index.html
+++ b/index.html
@@ -116,6 +116,38 @@
       </div>
     </section>
 
+    <!-- Testimonial Section -->
+    <section class="testiimonial-section">
+      <div class="testimonial-top-content text-center">
+        <h2>Clients Feedback</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
+          rem nesciunt!
+        </p>
+      </div>
+      <div class="testiomonal-items-container">
+        <div class="testimonial-item width-45 mr-3">
+          <img src="images/client1.jpg" alt="Client One" />
+          <p>
+            "Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live."
+          </p>
+          <h4>Maccy Johnson - CEO, Foodie</h4>
+        </div>
+        <div class="testimonial-item width-45 mr-3">
+          <img src="images/client2.jpg" alt="Client One" />
+          <p>
+            "Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live."
+          </p>
+          <h4>Senior Chef - Cookies 101</h4>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="text-center">
       <h2><span>Food </span> Network</h2>
