styling added all

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Network | Good Food Good Mood</title>
+    <!-- Google Font | Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Main CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -19,22 +26,28 @@
           <li><a href="#">Recipie</a></li>
           <li><a href="#">Testimonial</a></li>
           <li><a href="#">FAQ</a></li>
-          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </div>
     <!-- Banner Section  -->
     <section class="banner-section d-flex">
       <div class="banner-left width-50">
-        <h1>Just <span> Eat </span> Healthy</h1>
-        <h1>With Food Network</h1>
+        <h1><span> Skip </span> The Diet,</h1>
+        <h1>Just Eat Healthy</h1>
+        <h1>With <span>Food Network </span></h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel eos
           recusandae, hic quibusdam soluta commodi voluptatem provident
           consequuntur atque qui totam! Dolor, ut dolore ex tenetur eveniet
           rerum eligendi unde!
         </p>
-        <a href="#" class="btn"> Order Food </a>
+        <a
+          href="https://www.linkedin.com/in/joy-dey-5584841a4/"
+          target="_blank"
+          class="btn"
+        >
+          Order Food
+        </a>
       </div>
       <div class="banner-right width-50">
         <img src="images/top-banner.png" alt="Top Banner image " />
@@ -46,20 +59,26 @@
       <div class="about-left width-50">
         <img src="images/about.png" alt="About Chef" />
       </div>
-      <div class="about-right width-50">
+      <div class="about-right width-50 pl-3">
         <h2>About Me</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
           officiis voluptate iure excepturi cum magnam velit eum repudiandae!
           Recusandae explicabo possimus ex amet dolor eligendi.
         </p>
-        <a href="#" class="btn"> Contact Me</a>
+        <a
+          href="https://www.linkedin.com/in/joy-dey-5584841a4/"
+          target="_blank"
+          class="btn"
+        >
+          Contact Me</a
+        >
       </div>
     </section>
 
     <!-- Recipies Section  -->
     <section class="recipie-section">
-      <div class="recipie-top-content text-center">
+      <div class="top-content text-center">
         <h2>My Recipies</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
@@ -118,7 +137,7 @@
 
     <!-- Testimonial Section -->
     <section class="testiimonial-section">
-      <div class="testimonial-top-content text-center">
+      <div class="top-content text-center">
         <h2>Clients Feedback</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
@@ -126,7 +145,7 @@
           rem nesciunt!
         </p>
       </div>
-      <div class="testiomonal-items-container">
+      <div class="testiomonal-items-container d-flex">
         <div class="testimonial-item width-45 mr-3">
           <img src="images/client1.jpg" alt="Client One" />
           <p>
@@ -143,7 +162,78 @@
             Vokalia and Consonantia, there live the blind texts. Separated they
             live."
           </p>
-          <h4>Senior Chef - Cookies 101</h4>
+          <h4>David Walter - Senior Chef, Cookies 101</h4>
+        </div>
+      </div>
+    </section>
+
+    <!--  FAQ Section -->
+    <section class="faq-section">
+      <div class="top-content text-center">
+        <h2>Frequently Asked Question</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
+          rem nesciunt!
+        </p>
+      </div>
+      <div class="faq-container d-flex">
+        <div class="faq-left width-45 mr-3">
+          <div class="faq-item">
+            <h3>
+              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
+              really baked fresh each day?
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
+              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
+              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
+              earum velit maxime laboriosam. Officia, doloribus nulla.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>
+              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
+              really baked fresh each day?
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
+              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
+              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
+              earum velit maxime laboriosam. Officia, doloribus nulla.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq-right width-45 mr-3">
+          <div class="faq-item">
+            <h3>
+              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
+              really baked fresh each day?
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
+              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
+              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
+              earum velit maxime laboriosam. Officia, doloribus nulla.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>
+              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
+              really baked fresh each day?
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
+              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
+              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
+              earum velit maxime laboriosam. Officia, doloribus nulla.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -152,6 +242,26 @@
     <footer class="text-center">
       <h2><span>Food </span> Network</h2>
       <p>Eat Healthy to Live Healthy, Live Healthy to Live Happy</p>
+      <ul class="social-link">
+        <li>
+          <a href="https://www.facebook.com/joydey.joydey.16/" target="_blank">
+            Facebook
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/JoyDey71740087" target="_blank">
+            Twitter
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/joy-dey-5584841a4/"
+            target="_blank"
+          >
+            Linkedin
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
