finish the website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Network | Good Food Good Mood</title>
+    <title>
+      Food Network | Eat Healthy to Live Healthy, Live Healthy to Live Happy
+    </title>
     <!-- Favicon -->
     <link rel="icon" href="images/logo.png" />
     <!-- Google Font | Poppins -->
@@ -18,7 +20,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Home meu Area -->
+    <!-- Home meu Area/ Navbar Area -->
     <div class="navbar-area">
       <a href="#" class="logo"> <img src="images/logo.svg" alt="logo" /></a>
       <nav>
@@ -38,10 +40,8 @@
         <h1>Just Eat Healthy</h1>
         <h1>With <span>Food Network </span></h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel eos
-          recusandae, hic quibusdam soluta commodi voluptatem provident
-          consequuntur atque qui totam! Dolor, ut dolore ex tenetur eveniet
-          rerum eligendi unde!
+          Imagine you don't need a diet because we provide healthy and delicious
+          food for you! Explore your taste with our food and be Fit and Healthy!
         </p>
         <a
           href="https://www.linkedin.com/in/joy-dey-5584841a4/"
@@ -64,9 +64,11 @@
       <div class="about-right width-50 pl-3">
         <h2>About Me</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
-          officiis voluptate iure excepturi cum magnam velit eum repudiandae!
-          Recusandae explicabo possimus ex amet dolor eligendi.
+          Hi, I am Monica Wellington, worked as a chef in different restaurants
+          for the last 7 years. Now, I am working as a Founder and Senior Chef
+          in Food Network. I always try to make delicious food for the customer
+          and increase their appetite. I always make sure the quality of the
+          food. So that it remains fresh and nutritious when you eat it.
         </p>
         <a
           href="https://www.linkedin.com/in/joy-dey-5584841a4/"
@@ -83,9 +85,9 @@
       <div class="top-content text-center">
         <h2>My Recipies</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
-          rem nesciunt!
+          I make different dishes for our customers. With their valuable
+          feedback, we change the taste of our food. So, Don't go anywhere!
+          Taste our food and be healthy.
         </p>
       </div>
       <div class="recipie-items-container d-flex">
@@ -93,9 +95,9 @@
           <img src="images/sandwich.jpeg" alt="First item of food" />
           <h3>Rainbow Sandwich</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
-            error expedita assumenda inventore architecto fuga hic amet
-            accusantium?
+            Rainbow Sandwich is one of the popular dishes in our restaurant.
+            Customers enjoy this food and they like the ingredients. We use
+            Chicken, Fresh Bread, and other kinds of stuff.
           </p>
         </div>
 
@@ -103,9 +105,9 @@
           <img src="images/burger.jpg" alt="Second item of food" />
           <h3>Vegetarian Burger</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
-            error expedita assumenda inventore architecto fuga hic amet
-            accusantium?
+            The burger is one of the most popular fast food in the whole world.
+            But we make a change the burger from the traditional burger. This
+            burger is totally make with vegetables and fresh bread.
           </p>
         </div>
 
@@ -113,9 +115,9 @@
           <img src="images/frenchtoast.jpg" alt="Third item of food" />
           <h3>Raspberry Stuffed French Toast</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam autem
-            error expedita assumenda inventore architecto fuga hic amet
-            accusantium?
+            Raspberry Stuffed French Toast is one of my personal favorites. It
+            is a desert which you take after lunch, dinner and any time! With
+            Strawberry increases the taste a few times.
           </p>
         </div>
       </div>
@@ -132,8 +134,8 @@
         <p>Instagram Followers</p>
       </div>
       <div class="counter-item width-30 mr-3 text-center">
-        <h2>100k</h2>
-        <p>Dribble Shot Likes</p>
+        <h2>10k</h2>
+        <p>Regular Customers</p>
       </div>
     </section>
 
@@ -142,27 +144,26 @@
       <div class="top-content text-center">
         <h2>Clients Feedback</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
-          rem nesciunt!
+          Our Client and Customers always give us their valuable feedback. it
+          always energize us to make different dishes.
         </p>
       </div>
       <div class="testiomonal-items-container d-flex">
         <div class="testimonial-item width-45 mr-3">
           <img src="images/client1.jpg" alt="Client One" />
           <p>
-            "Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live."
+            "When I come to the Food Network, always enjoy their food. They
+            served Healthy and Fresh Food. Not only that it is delicious too. I
+            always recommend it to my friends and relatives."
           </p>
           <h4>Maccy Johnson - CEO, Foodie</h4>
         </div>
         <div class="testimonial-item width-45 mr-3">
           <img src="images/client2.jpg" alt="Client One" />
           <p>
-            "Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live."
+            "Food Network is not only famous for their fast food but also their
+            desserts. Whenever I pass to the area I always check their Raspberry
+            Stuffed French Toast. It is so much Yummy!"
           </p>
           <h4>David Walter - Senior Chef, Cookies 101</h4>
         </div>
@@ -174,66 +175,46 @@
       <div class="top-content text-center">
         <h2>Frequently Asked Question</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-          doloribus pariatur placeat obcaecati soluta culpa quis eveniet alias
-          rem nesciunt!
+          Customers sometimes need to know something more about our journey and
+          our quality food. You will get that basic information from this
+          section.
         </p>
       </div>
       <div class="faq-container d-flex">
         <div class="faq-left width-45 mr-3">
           <div class="faq-item">
-            <h3>
-              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
-              really baked fresh each day?
-            </h3>
+            <h3>~ Is Food Network make different dishes each day?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
-              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
-              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
-              earum velit maxime laboriosam. Officia, doloribus nulla.
+              We are trying to make different dishes as our customer response.
+              We have some fixed recipes which we always provide to you as your
+              order.
             </p>
           </div>
           <div class="faq-item">
-            <h3>
-              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
-              really baked fresh each day?
-            </h3>
+            <h3>~ Can I order your products online?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
-              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
-              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
-              earum velit maxime laboriosam. Officia, doloribus nulla.
+              Yes, You can order our food online. You can also order our food
+              from our mobile app. It takes some charge to deliver the food.
             </p>
           </div>
         </div>
 
         <div class="faq-right width-45 mr-3">
           <div class="faq-item">
-            <h3>
-              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
-              really baked fresh each day?
-            </h3>
+            <h3>~ Is your foods are containing with animal fats?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
-              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
-              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
-              earum velit maxime laboriosam. Officia, doloribus nulla.
+              We always try to make sure to avoid extra fat in the food. because
+              extra fat is not healthy for our body. We use as low as oil and
+              other fat products, thus we can give a best healthy food, which I
+              already mentioned so many times.
             </p>
           </div>
           <div class="faq-item">
-            <h3>
-              ~ Is Foodera Bread really baked fresh each day?Is Foodera Bread
-              really baked fresh each day?
-            </h3>
+            <h3>~ When you Open your shop?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-              voluptas ullam aperiam consequuntur eum. Eum mollitia doloribus
-              numquam reprehenderit. Quo est, repellendus, temporibus assumenda
-              amet magni, dolorum quod necessitatibus ipsum atque magnam labore
-              earum velit maxime laboriosam. Officia, doloribus nulla.
+              We always Open our Store at 8 AM and close it to 10 PM. There is
+              two Weekend, Saturday and Sunday. You have to order or come to the
+              working day.
             </p>
           </div>
         </div>
